crates/alder-parse/src/expression/snapshots/alder_parse__expression__tag__tests__error_tag_no_name.snap
---
source: crates/alder-parse/src/expression/tag.rs
description: ":Foo"
---
Tag(
    Name(
        1,
        1,
    ),
    1,
    1,
)
