crates/alder-parse/src/expression/snapshots/alder_parse__expression__tag__tests__error_tag_unclosed.snap
---
source: crates/alder-parse/src/expression/tag.rs
description: ":not_found(id"
---
Tag(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 11,
            },
            boundary: Position {
                line: 1,
                column: 14,
            },
            unexpected: Position {
                line: 1,
                column: 14,
            },
        },
    ),
    1,
    1,
)
