crates/alder-parse/src/expression/snapshots/alder_parse__expression__tag__tests__tag_empty_parens.snap
---
source: crates/alder-parse/src/expression/tag.rs
description: ":timeout()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Tag {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: "timeout",
        },
        args: [],
    },
}
