crates/alder-parse/src/expression/snapshots/alder_parse__expression__tag__tests__tag_with_arg.snap
---
source: crates/alder-parse/src/expression/tag.rs
description: ":not_found(id)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Tag {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: "not_found",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Var(
                    "id",
                ),
            },
        ],
    },
}
