crates/alder-parse/src/expression/snapshots/alder_parse__expression__tag__tests__tag_with_args.snap
---
source: crates/alder-parse/src/expression/tag.rs
description: ":invalid(field, \"reason\")"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 26,
        },
    },
    value: Tag {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: "invalid",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Var(
                    "field",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 17,
                    },
                    end: Position {
                        line: 1,
                        column: 25,
                    },
                },
                value: Str(
                    "reason",
                ),
            },
        ],
    },
}
